; ModuleID = '/home/carl/AnghaBench/lab/q3map2/q3map2/extr_model.c_PicoPrintFunc.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/q3map2/extr_model.c_PicoPrintFunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@SYS_VRB = common dso_local global i32 0, align 4
@SYS_WRN = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [13 x i8] c"WARNING: %s\0A\00", align 1
@SYS_ERR = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [11 x i8] c"ERROR: %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PicoPrintFunc(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = icmp eq i8* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %2
  br label %28

8:                                                ; preds = %2
  %9 = load i32, i32* %3, align 4
  switch i32 %9, label %28 [
    i32 130, label %10
    i32 129, label %13
    i32 128, label %17
    i32 132, label %21
    i32 131, label %25
  ]

10:                                               ; preds = %8
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @Sys_Printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %11)
  br label %28

13:                                               ; preds = %8
  %14 = load i32, i32* @SYS_VRB, align 4
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @Sys_FPrintf(i32 %14, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %15)
  br label %28

17:                                               ; preds = %8
  %18 = load i32, i32* @SYS_WRN, align 4
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @Sys_FPrintf(i32 %18, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i8* %19)
  br label %28

21:                                               ; preds = %8
  %22 = load i32, i32* @SYS_ERR, align 4
  %23 = load i8*, i8** %4, align 8
  %24 = call i32 @Sys_FPrintf(i32 %22, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0), i8* %23)
  br label %28

25:                                               ; preds = %8
  %26 = load i8*, i8** %4, align 8
  %27 = call i32 @Error(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0), i8* %26)
  br label %28

28:                                               ; preds = %7, %8, %25, %21, %17, %13, %10
  ret void
}

declare dso_local i32 @Sys_Printf(i8*, i8*) #1

declare dso_local i32 @Sys_FPrintf(i32, i8*, i8*) #1

declare dso_local i32 @Error(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
